improve dropdown button

--- a/home.html
+++ b/home.html
@@ -12,15 +12,18 @@
 <body>
     <div class="content-container">
         <header>
-            <div class="header-container">
-                <button id="moreOptions" class="dropdown-button">More options</button>
-                <h1>Portfolio - Oskar Jonsson</h1>
+            <div class="dropdown">
+                <div class="header-container">
+                    <button class="dropdown-button">More options</button>
+                    <div class="dropdown-content">
+                        <a href="# TO:DO">Option 1</a>
+                        <a href="# TO:DO">Option 2</a>
+                        <a href="# TO:DO">Option 3</a>
+                    </div>
+                </div>
             </div>
-            <div id="dropdown" class="dropdown-content">
-                <a href="#">Option 1</a>
-                <a href="#">Option 2</a>
-                <a href="#">Option 3</a>
-            </div>
+            <h1>Portfolio - Oskar Jonsson</h1>
+
         </header>
 
         <main>
